--- a/build.gradle
+++ b/build.gradle
@@ -25,5 +25,17 @@ dependencies {
     implementation 'com.google.guava:guava:27.0.1-jre'
 
     // Use JUnit test framework
+ 
     testImplementation 'junit:junit:4.12'
+    // Use JUnit test framework
+    testImplementation 'junit:junit:4.12'
+    // https://mvnrepository.com/artifact/commons-cli/commons-cli
+	compile group: 'commons-cli', name: 'commons-cli', version: '1.4'
+	
+	// https://mvnrepository.com/artifact/org.apache.commons/commons-csv
+   compile group: 'org.apache.commons', name: 'commons-csv', version: '1.6'
+    
 }
+
+apply plugin: 'application'
+mainClassName = "edu.handong.analysis.Main"
